<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".views.EditActivity">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical">

                <EditText
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/your_name" />


                <EditText
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/professional_title"
                    android:textColor="@color/textColor" />

                <EditText
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/short_and_engaging_pitch_about_you"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/primary" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/email"
                android:hint="@string/example_domain_com"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/phone"
                android:hint="@string/_123456789"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/primary" />

        <LinearLayout
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textColor="@color/primary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageButton
                    android:id="@+id/addEdu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/add"
                    android:tint="@color/primary" />

                <ImageButton
                    android:id="@+id/delEdu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/delete"
                    android:tint="@color/primary" />
            </LinearLayout>


            <EditText

                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/study_program"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/institute_place_of_education"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_experience"
                    android:textColor="@color/primary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/addWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/add"
                    android:tint="@color/primary" />

                <ImageButton
                    android:id="@+id/delWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/delete"
                    android:tint="@color/primary" />


            </LinearLayout>


            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/title_position"
                android:importantForAutofill="no"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/workplace_company"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@color/primary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/addSkill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/add"
                    android:tint="@color/primary"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/delSkill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/delete"
                    android:tint="@color/primary"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/skill"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_projects"
                    android:textColor="@color/primary"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageButton
                    android:id="@+id/projectAdd"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/add"
                    android:tint="@color/primary" />

                <ImageButton
                    android:id="@+id/projectDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/delete"
                    android:tint="@color/primary" />

            </LinearLayout>


            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/project_name"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/certificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/project"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Certificates"

                    android:textColor="@color/primary" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/certiAdd"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/add"
                    android:tint="@color/primary" />

                <ImageButton
                    android:id="@+id/certiDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/delete"
                    android:tint="@color/primary" />


            </LinearLayout>


            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Certificate name"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/certificate"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Extra-curricular activities"
                    android:textColor="@color/primary" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/extraAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/add"
                    android:tint="@color/primary" />

                <ImageButton
                    android:id="@+id/extraDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/delete"
                    android:tint="@color/primary" />

            </LinearLayout>


            <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Certificate name"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>